Fix - Horizontal scroll bar issue

--- a/inc/admin/sass/_colormag-dashboard.scss
+++ b/inc/admin/sass/_colormag-dashboard.scss
@@ -4,9 +4,6 @@
 		background-color: $background-color_2;
 		padding: 12px 20px;
 		border-bottom: 1px solid #ccd0d4;
-		margin-left: -20px;
-		margin-right: -20px;
-		border-bottom: 1px solid #ccd0d4;
 	}
 }
 .colormag-message__cta {
